--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel": "^2.8.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.58.1"
   }
 }
